--- a/Image_save_will_change_image_content.ipynb
+++ b/Image_save_will_change_image_content.ipynb
@@ -139,6 +139,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# save, then load"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
